--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
-VITE_API_HOST=http://localhost:8080
+VITE_API_HOST=https://solid-pancake-57qrww64ggf4w44-8080.app.github.dev
 
 #Gitspaces: https://solid-pancake-57qrww64ggf4w44-8080.app.github.dev
 
