--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
