--- a/api/package.json
+++ b/api/package.json
@@ -1,9 +1,12 @@
 {
   "name": "nodejs-server-pannel",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
+  "main": "src/app.ts",
+  "type": "commonjs",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node dist/bin/www.js",
+    "build": "npx tsc"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -14,5 +17,9 @@
     "fs": "^0.0.1-security",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.12",
+    "typescript": "^5.4.5"
   }
 }
